# sumstats-ratio-qtl

./: .gitignore  README.md  create_small_test_files.py  pyproject.toml  requirements.txt
analysis_for_paper/metabolite_ratio_package/: __init__.py  identify_hmdb_pwys.py  load_database_make_dataframe.py  match_rqtl_summary_to_qtl_sumstats.py
ratio_methodology/: build_ratio.ipynb
sumstats_ratio/: cli.py  main.py
tests/: test_cli.py  test_example.py  test_main.py
